--- a/assignment.html
+++ b/assignment.html
@@ -30,5 +30,6 @@
                 Greenland, Iceland, Spain, Russia and a small part of Portugal,</q> says NASA. The next total solar eclipse<br/>
                 is going to be in <b>20 more years</b>, which is a really long time! Events like this are really rare, which is why<br/>
                 this eclipse is a very special eclipse.</p>
+            <a href="https://orangedev1.github.io/htmlCodes1/Documents/Newspaper.pdf">Newspaper PDF</a>
         </body>
     </html>
